--- a/car/src/main/resources/application-docker.yml
+++ b/car/src/main/resources/application-docker.yml
@@ -1,11 +1,11 @@
 server:
-  port: 8801
-# Spring Config
+  port: 8802
+
 spring:
   application:
-    name: client-service 
+    name: car-service
   datasource:
-    url: ${DATABASE_URL:jdbc:mysql://localhost:3307/clients_db?createDatabaseIfNotExist=true}
+    url: ${DATABASE_URL:jdbc:mysql://mysql:3306/cars_db?createDatabaseIfNotExist=true}
     driver-class-name: com.mysql.cj.jdbc.Driver
     username: ${DATABASE_USERNAME:user}
     password: ${DATABASE_PASSWORD:password}
@@ -15,16 +15,14 @@ spring:
     show-sql: true
     database-platform: org.hibernate.dialect.MySQLDialect
 
-# Eureka Config
 eureka:
   client:
     service-url:
-      defaultZone: http://localhost:8761/eureka/ 
-    register-with-eureka: true 
-    fetch-registry: true 
+      defaultZone: http://eureka-server:8761/eureka/
+    register-with-eureka: true
+    fetch-registry: true
 
-# Logging Config
 logging:
   level:
-    org.hibernate.SQL: DEBUG 
-    org.springframework: INFO 
+    org.hibernate.SQL: DEBUG
+    org.springframework: INFO
