--- a/car/src/main/resources/application.yml
+++ b/car/src/main/resources/application.yml
@@ -5,19 +5,15 @@ spring:
   application:
     name: car-service 
   datasource:
-    url: jdbc:h2:mem:testdb 
-    driver-class-name: org.h2.Driver
-    username: sa
-    password: password
-  h2:
-    console:
-      enabled: true 
-      path: /h2-console 
+    url: ${DATABASE_URL:jdbc:mysql://localhost:3307/cars_db?createDatabaseIfNotExist=true}
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    username: ${DATABASE_USERNAME:user}
+    password: ${DATABASE_PASSWORD:password}
   jpa:
     hibernate:
       ddl-auto: create
     show-sql: true
-    database-platform: org.hibernate.dialect.H2Dialect
+    database-platform: org.hibernate.dialect.MySQLDialect
 
 eureka:
   client:
